Claude: Overhaul nr-common package.
This removes the build from git, and makes nr-common into both an npm
and deno module by changing the imports to match npm package names but
using the deno.json to map those to npm packages.

Claude's idea, hopefully it works.

--- a/nr-common/deno.jsonc
+++ b/nr-common/deno.jsonc
@@ -5,6 +5,8 @@
   "imports": {
     // "@babel/runtime": "npm:@babel/runtime@^7.26.0",
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+    "nostr-tools": "npm:nostr-tools@2.10.4",
+    "nostr-tools/core": "npm:nostr-tools@2.10.4/core",
     "zod": "npm:zod@^3.25.76",
   },
   "tasks": {
