--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -4,6 +4,8 @@
     "cache": "deno cache --lock deno.lock deps.ts",
   },
   "imports": {
+    "nostr-tools": "npm:nostr-tools@2.10.4",
+    "nostr-tools/core": "npm:nostr-tools@2.10.4/core",
     "zod": "npm:zod@^3.23.8",
     "@trustroots/nr-common": "../nr-common/mod.ts",
   },
