Claude: Fix the builds on GitHub.

--- a/.github/workflows/publish-nr-common.yml
+++ b/.github/workflows/publish-nr-common.yml
@@ -19,4 +19,5 @@ jobs:
       id-token: write # The OIDC ID token is used for authentication with JSR.
     steps:
       - uses: actions/checkout@v4
-      - run: cd nr-common; npx jsr publish --allow-slow-types
+      - uses: denoland/setup-deno@v2
+      - run: cd nr-common && deno publish --allow-slow-types
