--- a/nr-monitor/deno.json
+++ b/nr-monitor/deno.json
@@ -6,8 +6,10 @@
   },
   "imports": {
     "@trustroots/nr-common": "../nr-common/mod.ts",
-    "zod": "npm:zod@^3.25.76",
+    "nostr-tools": "npm:nostr-tools@2.10.4",
+    "nostr-tools/core": "npm:nostr-tools@2.10.4/core",
     "nostr-tools/pure": "npm:nostr-tools@2.10.4/pure",
+    "zod": "npm:zod@^3.25.76",
     "nostr-tools/relay": "npm:nostr-tools@2.10.4/relay",
     "@noble/hashes/utils": "npm:@noble/hashes@1.7.1/utils",
     "@std/log": "jsr:@std/log@0.224.5"
