Claude: Refactor to use a ping / ack check.

--- a/nr-monitor/.env.example
+++ b/nr-monitor/.env.example
@@ -9,13 +9,12 @@ RELAY_TO_RABBIT_URL=http://localhost:80/health
 SERVER_URL=http://localhost:80/health
 NOTIFICATION_DAEMON_URL=http://localhost:80/health
 
-# E2E test configuration (required)
-# Private key must match E2E_TEST_AUTHOR_PUBLIC_KEY in nr-common/constants.ts
-E2E_TEST_PRIVATE_KEY_HEX=
+# nr-server ping configuration (required)
+NR_SERVER_PING_PRIVATE_KEY_HEX=
 RELAY_WS_URL=ws://localhost:7777
 
-# E2E test settings (optional)
-E2E_TIMEOUT_SECONDS=60
+# nr-server ping settings (optional)
+NR_SERVER_PING_TIMEOUT_SECONDS=60
 
 # Monitor settings (optional)
 CHECK_INTERVAL_MS=60000
