Claude: Default to ever 15 minutes.

--- a/nr-monitor/.env.example
+++ b/nr-monitor/.env.example
@@ -16,5 +16,5 @@ RELAY_WS_URL=ws://localhost:7777
 NR_SERVER_PING_TIMEOUT_SECONDS=60
 
 # Monitor settings (optional)
-CHECK_INTERVAL_MS=60000
+CHECK_INTERVAL_MS=900000
 STARTUP_DELAY_MS=120000
