--- a/nr-monitor/.env.example
+++ b/nr-monitor/.env.example
@@ -6,14 +6,12 @@ TELEGRAM_CHAT=-1001234567890
 RELAY_URL=http://localhost:7777/health
 RABBITMQ_URL=http://localhost:15672/api/health/checks/alarms
 RELAY_TO_RABBIT_URL=http://localhost:80/health
-SERVER_URL=http://localhost:80/health
-NOTIFICATION_DAEMON_URL=http://localhost:80/health
 
-# nr-server ping configuration (required)
+# Ping configuration (required)
 RELAY_WS_URL=ws://localhost:7777
 
-# nr-server ping settings (optional)
-NR_SERVER_PING_TIMEOUT_SECONDS=60
+# Ping settings (optional)
+PING_TIMEOUT_SECONDS=60
 
 # Monitor settings (optional)
 CHECK_INTERVAL_MS=900000
