Claude: Rename `mod.ts` to `main.ts`.
mod.ts is for modules, and nr-server is not one.

--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "run": "deno run --allow-net --allow-env mod.ts",
+    "run": "deno run --allow-net --allow-env main.ts",
     "cache": "deno cache --lock deno.lock deps.ts",
   },
   "imports": {
