--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -1,12 +1,12 @@
 {
   "tasks": {
     "run": "deno run --allow-net --allow-env main.ts",
-    "cache": "deno cache --lock deno.lock deps.ts",
+    "cache": "deno cache --lock deno.lock deps.ts"
   },
   "imports": {
     "nostr-tools": "npm:nostr-tools@2.10.4",
     "nostr-tools/core": "npm:nostr-tools@2.10.4/core",
     "zod": "npm:zod@^3.23.8",
-    "@trustroots/nr-common": "../nr-common/mod.ts",
-  },
+    "@trustroots/nr-common": "../nr-common/mod.ts"
+  }
 }
